navegação entre activitys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="save">Salvar</string>
     <string name="your_name">Qual seu nome?</string>
     <string name="lets_start">Vamos começar?</string>
+
+    <string name="validation_mandatory_name">Informe seu nome</string>
 </resources>
