--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Motivation</string>
     <string name="new_word">Nova Frase</string>
     <string name="default_word">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
-    <string name="hello">Olá, Kotlin!</string>
+    <string name="hello">Olá</string>
     <string name="save">Salvar</string>
     <string name="your_name">Qual seu nome?</string>
     <string name="lets_start">Vamos começar?</string>
